--- a/GouGou-Live/Classes/Me/Controllers/Account/Paying/PayingViewController.xib
+++ b/GouGou-Live/Classes/Me/Controllers/Account/Paying/PayingViewController.xib
@@ -25,7 +25,7 @@
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="我的（未点击）" translatesAutoresizingMaskIntoConstraints="NO" id="mjY-TA-ykG">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="我的（未点击）" translatesAutoresizingMaskIntoConstraints="NO" id="mjY-TA-ykG">
                     <rect key="frame" x="20" y="19" width="19" height="22"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YL3-Pv-L23">
